add CRUD company category